--- a/application/avila.scss
+++ b/application/avila.scss
@@ -1,3 +1,5 @@
+/* Generic */
+
 html, body, .body-container, .main{
     width: 100%;
     height: 100%;
@@ -5,4 +7,82 @@ html, body, .body-container, .main{
 
 p, h1, h2, h3 {
     font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+}
+
+/* util for responsive */
+
+@mixin respond-to-max($media) {
+    @if $media == small-screen {
+        @media (max-width: $break-small) {
+            @content;
+        }
+    }
+    @else if $media == tablet-screen {
+        @media (max-width: $break-tablet) {
+            @content;
+        }
+    }
+    @else if $media == medium-screen {
+        @media (max-width: $break-medium) {
+            @content;
+        }
+    }
+    @else if $media == large-screen {
+        @media (max-width: $break-large) {
+            @content;
+        }
+    }
+    @else if $media == x-large-screen {
+        @media (max-width: $break-x-large) {
+            @content;
+        }
+    }
+    @else if $media == xx-large-screen {
+        @media (max-width: $break-xx-large) {
+            @content;
+        }
+    }
+    @else if $media == largest-screen {
+        @media (max-width: $break-largest) {
+            @content;
+        }
+    }
+}
+
+@mixin respond-to-min($media) {
+    @if $media == small-screen {
+        @media (min-width: $break-small) {
+            @content;
+        }
+    }
+    @else if $media == tablet-screen {
+        @media (min-width: $break-tablet) {
+            @content;
+        }
+    }
+    @else if $media == medium-screen {
+        @media (min-width: $break-medium) {
+            @content;
+        }
+    }
+    @else if $media == large-screen {
+        @media (min-width: $break-large) {
+            @content;
+        }
+    }
+    @else if $media == x-large-screen {
+        @media (min-width: $break-x-large) {
+            @content;
+        }
+    }
+    @else if $media == xx-large-screen {
+        @media (min-width: $break-xx-large) {
+            @content;
+        }
+    }
+    @else if $media == largest-screen {
+        @media (min-width: $break-largest) {
+            @content;
+        }
+    }
 }
