--- a/application/header/header.scss
+++ b/application/header/header.scss
@@ -1,5 +1,22 @@
-@import '../avila.scss';
+@import "../avila.scss";
 
-header {
-	background-color: black;
+.navbar {
+    background-color: #fff;
+    margin-bottom: 0px !important;
+    height: 90px;
+    span, a{
+        color: #000;
+    }
+    .logo {
+        height: 65px;
+    }
+    .navbar-right {
+        margin-top: 25px;
+        a {
+            font-size: 8pt;
+            border-left: 1px solid #d6d6d6;
+            color: #333333;
+        }
+    }
 }
+
