--- a/application/avila.scss
+++ b/application/avila.scss
@@ -3,10 +3,11 @@
 html, body, .body-container, .main{
     width: 100%;
     height: 100%;
+    overflow: auto;
 }
 
 p, h1, h2, h3 {
-    font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'OpenSansSemiBold', "Arial", "Helvetica";
 }
 
 /* util for responsive */
